--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-    command: --check-caps false  -ISCAgent false
+    command: --check-caps false  --ISCAgent false
     restart: always
     ports: 
       - 51772:1972
