--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       - ./:/irisdev/app
  
- ECPclient:
+  ecpclient:
     build: 
       context: .
       dockerfile: Dockerfile
